# IndexTTS2

./: .gitignore  data_t2e_extract.py  datapre.py  lora_t2e.py  main.py  pyproject.toml  train_s2m.py  train_s2mtest.py  train_t2s_byhand.py  train_t2s_full.py  train_t2s_v2.py
data/: processed_emotion_data.jsonl
indextts/: infer.py  train_gpt.py
indextts/BigVGAN/: bigvgan.py
indextts/gpt/: README.md  conformer_encoder.py  model.py  model_v2.py  perceiver.py
indextts/gpt/conformer/: attention.py  embedding.py  subsampling.py
indextts/s2mel/: hf_utils.py  s2m_model.py  wav2vecbert_extract.py
indextts/s2mel/modules/: commons.py
indextts/utils/: checkpoint.py  common.py  front.py  lora_t2e_2.py  maskgct_utils.py  replacepinyin.py  typical_sampling.py
indextts/vqvae/: xtts_dvae.py
